--- a/reward_train/configs/hps_config.yaml
+++ b/reward_train/configs/hps_config.yaml
@@ -1,7 +1,7 @@
 reward_name: hps # [imr, pick, hps] 
 seed: 2000
 log: 
-  name: try
+  name: try  # name of the experiment
   use_wandb: false
   save_checkpoint: true
   print_loss_every_iter: 1
@@ -9,20 +9,20 @@ log:
   plot_dir: outputs
   do_valid: false 
   checkpoint_dir: ckpt_out
-  save_checkpoint: False
+  save_checkpoint: false
   eval_start: false
 time_config:
   step_targets: [14,13,12,11,10,9,8,7,6,5,4,3,2,1,0] # if range 0-19   [14,13,12,11,10,9,8,7,6,5,4,3,2,1,0]
 data:
-  train_gt_file: setup/reward_gt_flux_5k.yaml
+  train_gt_file: setup/hps_gt_flux_train_5k.yaml
   train_data_folder: data_flux_train 
   train_prompts_file: setup/dataset_prompts_train.json
   train_prompt_range: 16 # 2 for top 2 prompts, etc.
   train_num_per_prompt: 8 # number images per prompt 
-  valid_gt_file: setup/reward_gt_flux_val_i88.yaml 
+  valid_gt_file: setup/hps_gt_flux_val_i88.yaml 
   valid_data_folder: data_flux_val  
   valid_prompts_file: setup/dataset_prompts_validation.json
-  valid_prompt_range: 200
+  valid_prompt_range: 4
   valid_num_per_prompt: 80
 train:
   base_model_path: checkpoints/HPS.pt 
