--- a/reward_train/configs/pic_config.yaml
+++ b/reward_train/configs/pic_config.yaml
@@ -1,28 +1,28 @@
 reward_name: pick # [imr, pick, hps] 
 seed: 2000
 log: 
-  name: try
+  name: try  # name of the experiment
   use_wandb: false
   save_checkpoint: true
   print_loss_every_iter: 1
   valid_every_epoch: 1
   plot_dir: outputs
   do_valid: false 
-  checkpoint_dir: checkpoints_out
-  save_checkpoint: False
+  checkpoint_dir: ckpt_out
+  save_checkpoint: false
   eval_start: false
 time_config:
   step_targets: [14,13,12,11,10,9,8,7,6,5,4,3,2,1,0] # if range 0-19   [14,13,12,11,10,9,8,7,6,5,4,3,2,1,0]
 data:
-  train_gt_file: setup/reward_gt_flux_5k.yaml
+  train_gt_file: setup/pick_gt_flux_train_5k.yaml
   train_data_folder: data_flux_train 
   train_prompts_file: setup/dataset_prompts_train.json
   train_prompt_range: 16 # 2 for top 2 prompts, etc.
   train_num_per_prompt: 8 # number images per prompt 
-  valid_gt_file: setup/reward_gt_flux_val_i88.yaml 
+  valid_gt_file: setup/pick_gt_flux_val_i88.yaml 
   valid_data_folder: data_flux_val  
   valid_prompts_file: setup/dataset_prompts_validation.json
-  valid_prompt_range: 200
+  valid_prompt_range: 4
   valid_num_per_prompt: 80
 train:
   base_model_path: yuvalkirstain/PickScore_v1
@@ -31,7 +31,7 @@ train:
   adam_beta1: 0.9
   adam_beta2: 0.999
   adam_eps: 1.0e-08
-  lr: 5.0e-6
+  lr: 5.0e-7
   min_lr_scale: 0.5
   max_grad_norm: 5.0
   scheduler_type: linear # or cosine or linear
